@@ -26,6 +26,7 @@ import sirius.pasta.tagliatelle.Tagliatelle;
 import sirius.pasta.tagliatelle.Template;
 import sirius.pasta.tagliatelle.rendering.GlobalRenderContext;
 
+import java.io.File;
 import java.time.LocalDate;
 import java.util.Arrays;
 import java.util.List;
@@ -36,7 +37,10 @@ import java.util.regex.Pattern;
 /**
  * Scans all available articles and turns them into {@link KnowledgeBaseEntry knowledge base entries}.
  * <p>
- * Note that this also deletes outdated entries or empty chapters.
+ * Note:
+ * - the task also deletes outdated entries or empty chapters.
+ * - the task ignores everything in the "kb/parts" directory as this is meant for shared components.
+ * - the task ignores every template which has a parent directory called "parts" as this is meant for article components.
  */
 @Register(framework = KnowledgeBase.FRAMEWORK_KNOWLEDGE_BASE)
 public class SynchronizeArticlesTask implements EndOfDayTask {
@@ -90,20 +94,56 @@ public class SynchronizeArticlesTask implements EndOfDayTask {
     }
 
     private void synchronizeArticles() {
+        LocalDate syncStart = LocalDate.now();
         String syncId = keyGenerator.generateId();
         Sirius.getClasspath()
               .find(Pattern.compile("(default/|customizations/[^/]+/)?kb/.*\\.pasta"))
-              .forEach(matcher -> updateArticle(cleanupTemplatePath(matcher.group(0)), syncId));
+              .map(matcher -> cleanupTemplatePath(matcher.group(0)))
+              .filter(templatePath -> !isTemplateInsidePartsDirectory(templatePath))
+              .filter(templatePath -> !isTemplateAPartOfAnArticle(templatePath))
+              .forEach(templatePath -> updateArticle(templatePath, syncId));
 
         elastic.refresh(KnowledgeBaseEntry.class);
         cleanupOldEntries(syncId);
         if (!Sirius.isDev()) {
             // We only remove empty chapters from production instances as in development systems it might
             // be helpful to see these chapters to know their ID.
-            cleanupEmptyChapters();
+            cleanupEmptyChapters(syncStart);
         }
         checkCrossReferences();
         knowledgeBase.resetLanguages();
+    }
+
+    /**
+     * Determines if the given template is part of an article.
+     * <p>
+     * Note:
+     * - Every template which is inside a parent directory called "parts" is considered a component of an article.
+     * <p>
+     * Example:
+     * kb/integration/document/parts
+     * The main document article is located at /document. Its components are located in /document/parts.
+     *
+     * @param templatePath the template path to check
+     * @return <tt>true</tt> if the template is part of an article, <tt>false</tt> otherwise
+     */
+    private static boolean isTemplateAPartOfAnArticle(String templatePath) {
+        String parentDir = new File(templatePath).getParentFile().getName();
+        return "parts".equals(parentDir);
+    }
+
+    /**
+     * Determines if the given template path is located inside the "kb/parts" directory.
+     * <p>
+     * Note:
+     * - The kb/parts directory (and sub-dirs) only contains article components which are not articles on their own.
+     * - The directory is meant for shared components which are used by multiple articles.
+     *
+     * @param templatePath the template path to check
+     * @return <tt>true</tt> if the template path is located inside the "kb/parts" directory, <tt>false</tt> otherwise
+     */
+    private static boolean isTemplateInsidePartsDirectory(String templatePath) {
+        return templatePath.contains("kb/parts/");
     }
 
     private String cleanupTemplatePath(String templatePath) {
@@ -120,6 +160,10 @@ public class SynchronizeArticlesTask implements EndOfDayTask {
                                                                                            + templatePath));
             GlobalRenderContext context = tagliatelle.createRenderContext();
             template.render(context);
+
+            if (!isArticle(context)) {
+                return;
+            }
 
             String articleId = Value.of(context.getExtraBlock(BLOCK_CODE)).toUpperCase();
             String language = context.getExtraBlock(BLOCK_LANG);
@@ -140,13 +184,16 @@ public class SynchronizeArticlesTask implements EndOfDayTask {
                   .forEach(crossReference -> entry.getRelatesTo().modify().add(crossReference));
 
             elastic.update(entry);
-        } catch (Exception e) {
-            Exceptions.handle()
-                      .to(KnowledgeBase.LOG)
-                      .error(e)
-                      .withSystemErrorMessage("Failed to load article %s: %s (%s)", templatePath)
-                      .handle();
+        } catch (Exception exception) {
+            KnowledgeBase.LOG.SEVERE("Failed to load article %s, reason: %s", templatePath, exception.getMessage());
         }
+    }
+
+    private boolean isArticle(GlobalRenderContext context) {
+        String articleId = context.getExtraBlock(BLOCK_CODE);
+        String language = context.getExtraBlock(BLOCK_LANG);
+        String title = context.getExtraBlock(BLOCK_TITLE);
+        return Strings.isFilled(articleId) && Strings.isFilled(language) && Strings.isFilled(title);
     }
 
     private KnowledgeBaseEntry findOrCreateEntry(String templatePath, String articleId, String language) {
@@ -187,7 +234,7 @@ public class SynchronizeArticlesTask implements EndOfDayTask {
                 return;
             }
             entries.forEach(entryProcessor);
-            lastArticleId = entries.get(entries.size() - 1).getArticleId();
+            lastArticleId = entries.getLast().getArticleId();
         }
     }
 
@@ -204,31 +251,44 @@ public class SynchronizeArticlesTask implements EndOfDayTask {
         });
     }
 
-    private void cleanupEmptyChapters() {
+    private void cleanupEmptyChapters(LocalDate syncStart) {
         AtomicBoolean performCheck = new AtomicBoolean(true);
         while (performCheck.get()) {
             performCheck.set(false);
             blockwiseIterate(entry -> {
-                if (entry.isChapter()) {
-                    boolean hasChildren = elastic.select(KnowledgeBaseEntry.class)
-                                                 .eq(KnowledgeBaseEntry.PARENT_ID, entry.getArticleId())
-                                                 .eq(KnowledgeBaseEntry.LANGUAGE, entry.getLanguage())
-                                                 .exists();
-                    if (!hasChildren) {
-                        KnowledgeBase.LOG.INFO("Deleting empty chapter %s (%s) in language %s",
-                                               entry.getArticleId(),
-                                               entry.getTitle(),
-                                               entry.getLanguage());
-                        elastic.delete(entry);
-                        performCheck.set(true);
-                    }
-                }
+                cleanupEmptyChapter(entry, performCheck, syncStart);
             });
 
             if (performCheck.get()) {
                 elastic.getLowLevelClient().refresh(mixing.getDescriptor(KnowledgeBaseEntry.class).getRelationName());
             }
         }
+    }
+
+    private void cleanupEmptyChapter(KnowledgeBaseEntry entry, AtomicBoolean performCheck, LocalDate syncStart) {
+        if (!entry.isChapter()) {
+            // The checked entry is not a chapter
+            return;
+        }
+
+        boolean hasChildren = elastic.select(KnowledgeBaseEntry.class)
+                                     .eq(KnowledgeBaseEntry.PARENT_ID, entry.getArticleId())
+                                     .eq(KnowledgeBaseEntry.LANGUAGE, entry.getLanguage())
+                                     .exists();
+        if (hasChildren) {
+            // The checked chapter actually has children
+            return;
+        }
+
+        if (entry.getCreated().isBefore(syncStart)) {
+            // Only log when a previously filled existing chapter is deleted
+            KnowledgeBase.LOG.INFO("Deleting empty chapter %s (%s) in language %s",
+                                   entry.getArticleId(),
+                                   entry.getTitle(),
+                                   entry.getLanguage());
+        }
+        elastic.delete(entry);
+        performCheck.set(true);
     }
 
     private void checkCrossReferences() {
